force-app/main/default/objects/Contact/fields/Birthplace__c.field-meta.xml
<CustomField>
    <fullName>Birthplace__c</fullName>
    <label>Место рождения</label>
    <type>Address</type>
</CustomField>