force-app/main/default/objects/Contact/fields/Grade_Point_Average__c.field-meta.xml
<CustomField>
    <fullName>Grade_Point_Average__c</fullName>
    <label>Средний балл аттестата</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>