force-app/main/default/objects/Contact/fields/Group__c.field-meta.xml
<CustomField>
    <fullName>Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Группа</label>
    <referenceTo>Group__c</referenceTo>
    <relationshipLabel>Студенты</relationshipLabel>
    <relationshipName>Students</relationshipName>
    <type>Lookup</type>
</CustomField>