force-app/main/default/objects/Contact/fields/Has_Gold_Medal__c.field-meta.xml
<CustomField>
    <fullName>Has_Gold_Medal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Имеет золотую медаль</label>
    <type>Checkbox</type>
</CustomField>