force-app/main/default/objects/Contact/fields/Notification_Address__c.field-meta.xml
<CustomField>
    <fullName>Notification_Address__c</fullName>
    <label>Адрес уведомления</label>
    <type>Address</type>
</CustomField>