force-app/main/default/objects/Contact/fields/Passport_Id_Number__c.field-meta.xml
<CustomField>
    <fullName>Passport_Id_Number__c</fullName>
    <label>Идентификационный номер паспорта</label>
    <length>14</length>
    <type>Text</type>
</CustomField>