force-app/main/default/objects/Contact/fields/Passport_Series__c.field-meta.xml
<CustomField>
    <fullName>Passport_Series__c</fullName>
    <label>Серия паспорта</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Passport_Series</valueSetName>
    </valueSet>
</CustomField>