force-app/main/default/objects/Contact/fields/Patronymic__c.field-meta.xml
<CustomField>
    <fullName>Patronymic__c</fullName>
    <label>Отчество</label>
    <length>80</length>
    <type>Text</type>
</CustomField>