force-app/main/default/objects/Contact/fields/Registration_Address__c.field-meta.xml
<CustomField>
    <fullName>Registration_Address__c</fullName>
    <label>Адрес регистрации</label>
    <type>Address</type>
</CustomField>