force-app/main/default/objects/Contact/fields/Room__c.field-meta.xml
<CustomField>
    <fullName>Room__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Комната</label>
    <referenceTo>Room__c</referenceTo>
    <relationshipLabel>Студенты</relationshipLabel>
    <relationshipName>Students</relationshipName>
    <type>Lookup</type>
</CustomField>