force-app/main/default/objects/Contact/fields/School_Graduation_Year__c.field-meta.xml
<CustomField>
    <fullName>School_Graduation_Year__c</fullName>
    <label>Год окончания школы</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>