force-app/main/default/objects/Contact/fields/Sex__c.field-meta.xml
<CustomField>
    <fullName>Sex__c</fullName>
    <label>Пол</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Sexes</valueSetName>
    </valueSet>
</CustomField>