force-app/main/default/objects/Contact/fields/Was_In_Military__c.field-meta.xml
<CustomField>
    <fullName>Was_In_Military__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Служил в армии</label>
    <type>Checkbox</type>
</CustomField>